# queryweaver

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yaml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  sitemap.xml
.github/workflows/: onPR.yaml  on_push.yaml  publish.yaml  release.yaml
docs/: example.md  index.md  install.md
example/: index.html
examples/: example.db  example.yaml  init_db.py  test_count.py  test_query.py  test_query_schematic.py  test_sum.py
install/: index.html
search/: search_index.json
src/queryweaver/: __init__.py  query_builder.py  tables.py
tests/: test_column.py
tools/: bump.py  version.py
