[project]
name = "queryweaver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "coverage>=7.6.4",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.44",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]
