[project]
name = "queryweaver"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "pyyaml>=6.0.2",]

[dependency-groups]
dev = [ "coverage>=7.6.4", "mkdocs>=1.6.1", "mkdocs-material>=9.5.44", "mypy>=1.13.0", "pre-commit>=4.0.1", "pytest>=8.3.3", "ruff>=0.7.3",]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = [ "__init__.py", "./src/xrfanalyzer/gui/components",]

[tool.ruff]
target-version = "py311"
exclude = [ ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".nox", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "site-packages",]

[tool.ruff.lint]
select = [ "E", "F", "I", "RUF", "UP",]
ignore = [ "E501",]
fixable = [ "ALL",]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = 8.0
addopts = "-vv -ra -q -s"
testpaths = "tests"
pythonpath = [ ".", "src",]
filterwarnings = "ignore"

[tool.coverage.run]
branch = true
data_file = "./reports/.coverage"
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
fail_under = 50

[tool.coverage.html]
directory = "./reports/coverage_html"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "E402", "F401", "F403",]
"**/{tests,docs,tools}/*" = [ "E402",]
